# kuatia

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/kuatia/: Cargo.toml  README.md
crates/kuatia-core/: Cargo.toml  README.md
crates/kuatia-core/src/: hash.rs  lib.rs  posting_resolution.rs  posting_selection.rs  validate.rs
crates/kuatia-dashboard/: Cargo.toml  README.md
crates/kuatia-dashboard/src/: api.rs  assets.rs  data.rs  main.rs  seed.rs  ui.rs
crates/kuatia-dashboard/static/: dashboard.css
crates/kuatia-dashboard/templates/: base.html
crates/kuatia-dashboard/templates/pages/: account.html  accounts.html  events.html  overview.html  transfers.html
crates/kuatia-dashboard/templates/partials/: account.html  accounts.html  events.html  overview.html  transfers.html
crates/kuatia-money/: Cargo.toml  README.md
crates/kuatia-money/src/: lib.rs
crates/kuatia-storage/: Cargo.toml  README.md
crates/kuatia-storage-sql/: Cargo.toml  README.md
crates/kuatia-storage-sql/src/: lib.rs
crates/kuatia-storage-sql/src/migrations/: 001_init.sql  002_subaccounts.sql  003_drop_user_data.sql  004_index_tables.sql  005_account_head.sql  006_drop_policy.sql  007_balance_projection.sql
crates/kuatia-storage-sql/src/migrations/postgres/: 001_init.sql
crates/kuatia-storage-sql/src/migrations/sqlite/: 001_init.sql
crates/kuatia-storage-sql/tests/: sqlite.rs
crates/kuatia-storage/src/: error.rs  events.rs  lib.rs  mem_store.rs  query.rs  store.rs  store_tests.rs
crates/kuatia-storage/tests/: concurrency.rs  store_conformance.rs
crates/kuatia-types/: Cargo.toml  README.md
crates/kuatia-types/src/: account_code.rs  autoid.rs  canonical.rs  lib.rs
crates/kuatia/examples/: create_accounts.rs  fund_and_trade.rs  inflight_hold.rs  withdraw.rs
crates/kuatia/src/: error.rs  inflight.rs  ledger.rs  lib.rs  prelude.rs  saga.rs
crates/kuatia/src/ledger/: balance.rs  commit.rs  envelope_saga.rs  lifecycle.rs  projection.rs  query.rs  transition.rs
crates/kuatia/tests/: concurrency.rs  inflight.rs  integration.rs  projection.rs  saga.rs
doc/: accounting-mapping.md  accounts.md  architecture.md  crates.md  glossary.md  inflight.md  journaling.md  transfers.md
doc/adr/: 0001-modified-utxo-signed-postings.md  0002-saga-commit-pipeline.md  0003-dumb-storage-saga-recovery.md  0004-account-policies-overdraft-model.md  0005-intent-api-movements-vs-envelopes.md  0006-reservation-protocol-posting-lifecycle.md  0007-reversal-via-compensating-transfers.md  0008-conformance-tested-storage.md  0009-monetary-representation-integer-minor-units.md  0010-event-stream-vs-transfer-log.md  0011-swappable-money-backing.md  0012-subaccounts.md  0013-journaling-model.md  0014-inflight-holds-via-holding-accounts.md  0015-fixed-width-account-code.md  0016-immutable-postings-index-tables.md  0017-correctness-first-append-only-hot-indexes.md  0018-single-debit-must-not-exceed-credit-flag.md  0019-cached-balance-projection.md  0020-account-transition-recovery.md  README.md  template.md
