[workspace]
resolver = "2"
members = ["crates/kuatia-money", "crates/kuatia-types", "crates/kuatia-core", "crates/kuatia-storage", "crates/kuatia-storage-sql", "crates/kuatia", "crates/kuatia-dashboard"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/crodas/kuatia"
authors = ["Cesar Rodas <c@rm.com.py>"]
keywords = ["ledger", "accounting", "double-entry", "utxo", "finance"]
categories = ["finance", "database-implementations"]

[workspace.dependencies]
# Internal crates
kuatia-money = { path = "crates/kuatia-money", version = "0.2.0" }
kuatia-types = { path = "crates/kuatia-types", version = "0.2.0" }
kuatia-core = { path = "crates/kuatia-core", version = "0.2.0" }
kuatia-storage = { path = "crates/kuatia-storage", version = "0.2.0" }
kuatia-storage-sql = { path = "crates/kuatia-storage-sql", version = "0.2.0" }

# External crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
bitflags = { version = "2", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1" }
paste = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "any"] }
legend = "0.1"
tracing = "0.1"

[workspace.lints.rust]
arithmetic_overflow = "deny"
missing_docs = "deny"

[profile.release]
overflow-checks = true
