[package]
name = "kuatia-core"
description = "Pure, sans-IO core logic for the Kuatia ledger: validation, hashing, posting selection."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
# Pass through to kuatia-types: swap the Cent backing to i128.
i128 = ["kuatia-types/i128"]

[dependencies]
kuatia-types.workspace = true
sha2.workspace = true
serde.workspace = true
